--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.PrototypeA"
         tools:targetApi="31">
         <activity
+            android:name=".photo_check"
+            android:exported="false" />
+        <activity
             android:name=".image_viewer"
             android:exported="false"
             android:theme="@style/popup_theme" />
@@ -24,8 +27,9 @@
             android:name=".video_assinment"
             android:exported="false"
             android:theme="@style/popup_theme" />
-        <activity android:name=".player_2x2_grid"
-            android:exported="false"/>
+        <activity
+            android:name=".player_2x2_grid"
+            android:exported="false" />
         <activity
             android:name=".video_player"
             android:exported="false"
