--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.PrototypeA"
         tools:targetApi="31">
         <activity
+            android:name=".custom_icon"
+            android:exported="false" />
+        <activity
             android:name=".photo_check"
             android:exported="false" />
         <activity
