--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
         -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="" />
+            android:value="AIzaSyDYkfGeg6drgb0K-iKM8EFI2lwfqTjyP8o" />
 
         <activity
             android:name=".get_location"
