--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
     plugins {
     id 'com.android.application'
         id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+        id 'com.google.gms.google-services'
     }
 
 android {
@@ -42,15 +43,17 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation platform('com.google.firebase:firebase-bom:30.3.1')
     implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.firebase:firebase-firestore'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    //implementation 'com.google.firebase:firebase-firestore'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-fragment:2.5.1'
     implementation 'androidx.navigation:navigation-ui:2.5.1'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.android.gms:play-services-location:20.0.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.google.firebase:firebase-firestore:24.2.2'
 }
